VFS-9780 Fixed too large margin of file info modal tabbar

--- a/src/app/styles/components/file-info-modal.scss
+++ b/src/app/styles/components/file-info-modal.scss
@@ -237,10 +237,6 @@
     border-radius: $border-radius-base;
   }
 
-  .bs-tab-onedata {
-    padding-bottom: 2 * $padding-large-vertical;
-  }
-
   .storage-locations-expand {
     padding-bottom: 10px;
   }
